# mdbook-tools

./: .envrc  .gitignore  Cargo.toml  Containerfile  README.md  justfile  shell.nix
.devcontainer/: devcontainer.json
src/: main.rs
testing/test-book/: book.toml
testing/test-book/src/: SUMMARY.md
testing/test-book/src/0001_doing_stuff/: 0002_just_do_it.md  README.md
testing/test-book/src/0002_having_stuff/: 0001_booya.md  0001_this_is_2.md  README.md
