[package]
name = "mdbook-tools"
version = "0.1.0"
edition = "2021"
description = "A collection of tools for mdbook"
license = "MIT"
repository = "https://github.com/mcmah309/mdbook-tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.11", features=["derive"]}
anyhow = "1.0.75"
